--- a/src/components/video/video.module.css
+++ b/src/components/video/video.module.css
@@ -3,7 +3,7 @@
 }
 iframe {
     width: 100%;
-    height: 400px;
+    height: 100%;
 }
 .info {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
