--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,10 +7,12 @@
 
 body, html {
   height: 100%;
+  width: 100%;
   overscroll-behavior: none;
   margin: 0px;
   padding: 0px;
-  background-color: black;
+  background-color: #1b1b1b;
+  color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
