--- a/src/components/video/videoGallery.module.scss
+++ b/src/components/video/videoGallery.module.scss
@@ -15,10 +15,6 @@
     vertical-align: middle;
   }
   .previewVideoContainer {
-    background-image: url('../../images/TV.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
     height: 50vw;
     width: 50vw;
     margin: 0px auto;
@@ -38,7 +34,9 @@
   }
 }
 
-/*.fullScreen {
+.fullScreen {
+  color: red;
+  /*
   position: fixed;
   -webkit-transition: all 1s ease-in-out;
      -moz-transition: all 1s ease-in-out;
@@ -50,8 +48,8 @@
         top:0;
         height: 100vh;
         width: 100vw;
-        z-index: 100;
-}*/
+        z-index: 100;*/
+}
 
 .hidden {
   display:none;
