--- a/src/components/video/videoGallery.module.scss
+++ b/src/components/video/videoGallery.module.scss
@@ -35,8 +35,7 @@
 }
 
 .fullScreen {
-  color: red;
-  /*
+  
   position: fixed;
   -webkit-transition: all 1s ease-in-out;
      -moz-transition: all 1s ease-in-out;
@@ -48,7 +47,7 @@
         top:0;
         height: 100vh;
         width: 100vw;
-        z-index: 100;*/
+        z-index: 100;
 }
 
 .hidden {
