--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,7 @@ body, html {
   height: 100%;
   width: 100%;
   overscroll-behavior: none;
+  overflow: hidden;
   margin: 0px;
   padding: 0px;
   background-color: #1b1b1b;
