--- a/src/components/contact/contactForm.module.css
+++ b/src/components/contact/contactForm.module.css
@@ -1,31 +1,73 @@
-.formContainer {
-    margin: 0px auto;
-    max-width: 400px;
-    padding: 10%;
-    box-sizing: border-box;
+.hide {
+    display: none;
 }
-form label {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.contactContainer {
+    margin: 0px auto;
+    width: 75vw;
+    height: 100vh;
+    max-width: 600px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.title, .formContainer {
+    flex: 1 1 0;
+    min-width: 200px;
+}
+.title {
+    padding-right: 10%;
+}
+
+.successMsg, form label {
+    font-size: 1em;
     color: white;
 }
+.successMsg {
+    line-height: 1.5em;
+    text-align: right;
+    margin-bottom: 20px;
+}
+input[name=bot-field] {
+    display: none;
+}
+label {
+    font-family: 'Above', Verdana, Tahoma, Geneva, Verdana, sans-serif;
+    display: block;
+}
  input[type=text],input[type=email], select, textarea {
-     width: 100%;
-     padding: 12px;
+     padding: 10px;
+     width: calc(100% - 22px);
+     width: -moz-calc(100% - 22px);
+     width: -webkit-calc(100% - 22px);
+     width: -o-calc(100% - 22px);
+     width: calc(100% - 22px);
+
      border: 1px solid #ccc;
-     border-radius: 4px;
+     border-radius: 2px;
      box-sizing: border-box;
      margin-top: 6px;
-     margin-bottom: 16px;
-     resize: vertical;
+     margin-bottom: 20px;
 }
- input[type=submit] {
-     background-color: #4CAF50;
-     color: white;
-     padding: 12px 20px;
-     border: none;
-     border-radius: 4px;
-     cursor: pointer;
+button{
+    float: right;
+    width: 40%;
+    height: 40%;
+    min-width: 100px;
+    background: none;
+    padding: 0px;
+    border: none;
+    cursor: pointer;
 }
- input[type=submit]:hover {
-     background-color: #45a049;
+button:active, button:focus {
+    outline: none;
+}
+
+@media (max-width: 560px) {
+    .title {
+       padding: 0 10px;
+    }
 }
