--- a/src/components/video/glitchVideoContainer.module.css
+++ b/src/components/video/glitchVideoContainer.module.css
@@ -35,7 +35,7 @@
       background: rgba(0,0,0,0.3); 
       color: #fff; 
       padding: 1rem; 
-      font-family: Avenir, Helvetica, sans-serif; 
+      font-family: 'Open Sans', sans-serif;
   }
   .vid-info h1 { 
       font-size: 2rem; 
