--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,9 @@ body, html {
   padding: 0px;
   background-color: #1b1b1b;
   color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: lighter;
+
 }
 
 
