--- a/src/components/video/videoGallery.module.scss
+++ b/src/components/video/videoGallery.module.scss
@@ -1,25 +1,33 @@
+.container {
+  width: 100vw;
+  height: 100vh;
+  max-width: 900px;
+  position: relative;
+  margin: 0 auto;
+}
 .galleryContainer {
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: scroll;
   top: 50px;
 }
 .TVContainer {
-  height: 100vh;
-  width: 50vw;
-  margin: 0 5vw;
+  height: 100%;
+  width: 50%;
+  margin: 0 5%;
   display: table;
   .TV  {
     display: table-cell;
     vertical-align: middle;
   }
   .previewVideoContainer {
-    height: 50vw;
-    width: 50vw;
+    height: 100%;
+    width: 100%;
     margin: 0px auto;
     display: block;
     position: relative;
+    display: table-cell;
   }
   .static, .previewVideo {
     position: absolute;
@@ -29,11 +37,13 @@
     left: 0;
     margin: 5%;
   }
+  .description {
+    font-size: .7em;
+    letter-spacing: .18em;
+    height: 150px;
+  }
   .videoContainer { 
     background: rgba(0,0,0,0);
-  }
-  .description {
-    height: 150px;
   }
 }
 .fullScreenOverlay {
@@ -82,15 +92,16 @@
   .TVContainer {
     height: 50vh;
     width: 90vw;
+    margin: 0 auto;
     .previewVideoContainer {
-      height: 50vh;
-      width: 50vh;
+      height: 90vw;
+      width: 90vw;
       margin-top: 2vh;
+      display: block;
     }
     .description {
-      width: 50vh;
+      width: 90vw;
       height: 15vh;
-      font-size: .8em;
       margin: 0 auto;
     }
   }
