be happy for once

--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -2,7 +2,7 @@
     margin: 0px auto;
     width: 75vw;
     height: 100vh;
-    max-width: 600px;
+    max-width: 700px;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
@@ -11,22 +11,50 @@
     align-items: center;
     align-content: center;
 }
+.textContainer {
+    flex: 1 1 200px;
+    padding: 0 1rem;
+    min-width: 250px;
+}
 .aboutText {
-    flex: 1 1 0;
-    max-width: 200px;
     line-height: 1.5;
     letter-spacing: .18em;
-    font-size: .7em;
+    font-size: .9em;
 }
 
 .title {
-    flex: 1 1 0;
-    min-width: 200px;
-    padding-right: 10%;
+    padding-bottom: 1rem;
+}
+
+.drewContainer {
+    flex: 0 1 115px;
+    padding: 1.5rem 1rem;
+    padding-bottom: 0;
+}
+#drew {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    border-radius: 5%;
+    -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.45);
+    box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.45);
 }
 
 @media (max-width: 560px) {
-    .title {
-       padding: 0 10px;
+    .aboutContainer {
+        width: 75%;
+    }
+    .textContainer, .title, .drewContainer  {
+       padding: 0;
+       padding-bottom: 1rem;
+    }
+    .textContainer {
+        padding-top: 6rem;
+    }
+
+    .drewContainer { 
+        flex: 0 1 auto;
+        padding-top:1rem;  
     }
 }
