--- a/src/components/contact/contactForm.module.css
+++ b/src/components/contact/contactForm.module.css
@@ -2,16 +2,15 @@
     display: none;
 }
 .contactContainer {
-    margin: 0px auto;
+    margin: 2rem auto;
     width: 75vw;
     height: 100vh;
-    max-width: 600px;
+    max-width: 800px;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
     align-content: center;
 }
 .title, .formContainer {
@@ -68,6 +67,6 @@ button:active, button:focus {
 
 @media (max-width: 560px) {
     .title {
-       padding: 0 10px;
+       padding: 2rem 10px;
     }
 }
