--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,6 +8,14 @@
   .header-top {
     display: none;
   }
+
+  .navHover {
+    position:fixed;
+    width: 100%;
+    height: 50px;
+    z-index: 10;
+  }
+
   nav {
       box-sizing: border-box;
       position: fixed;
@@ -15,15 +23,28 @@
       height: 50px;
       width: 100%;
       background: #000000b8;
+      z-index: 12;
+
+      border-bottom: 2px solid #343333;
+    -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.45);
+    box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.45);
+
+      -webkit-transition: all .9s ease-out;
+      transition: all .9s ease-out;
+
       opacity: 0;
-      -webkit-transition: all 3s;
-      transition: all 3s;
-}
+      transform: translateY(-50px);
+  }
 
   .open-menu ~ nav {
+    -webkit-transition: all .5s ease-out;
+    transition: all .5s ease-out;
+
     opacity: 1;
-    z-index: 12;
+    transform: translateY(0px);
   }
+
   nav ul {
       list-style-type: none;
       width: 100%;
@@ -102,7 +123,7 @@
   /* MQ STYLES
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
   
-  @media screen and (max-width: 500px) {
+  @media only screen and (max-width: 500px) {
 
     .header-top {
       height: 50px;
@@ -150,13 +171,11 @@
 
     nav {
       height: 200px;
+      background-color: #000000e3;
     }
+
     nav ul {
       flex-direction: column;
     }
-  }
-  
-  @media screen and (max-width: 400px) {
-
   }
   
