--- a/src/components/social/share.scss
+++ b/src/components/social/share.scss
@@ -2,33 +2,52 @@
 
 
 $brand-colors: (
+	youtube: #ff0000,
+	instagram: #d62976,
 	facebook: #3b5998,
-	twitter: #1da1f2,
-	email: #ffbc00,
-	linkedin: #0077b5,
+	email: #ffbc00
 );
 
 * {
 	box-sizing: unset !important;		
 }
 
+.link-social {
+	position: absolute;
+	right: 4.5rem;
+	top: 3.5rem;
+}
+.link-social.bottom {
+	position: relative;
+	top: 0;
+	right: 0;
+}
 .post-social {
-	display: inline-block;
+
+    -webkit-box-shadow: 0px -10px 10px -10px rgba(0,0,0,0.75);
+    -moz-box-shadow:  0px -10px 10px -10px rgba(0,0,0,0.75);
+    box-shadow:  0px -10px 10px -10px rgba(0,0,0,0.75);
+}
+.post-social, .link-social {
+	display: flex;
 	.shareText {
+		align-self: flex-end;
 		color: white;
-		font-size: 26px;
-		padding-right: 10px;
+		font-size: 1.2rem;
+		margin-right: auto;
+		margin-bottom: .5rem;
+		margin-left: .5rem;
 		font-family: "Above", Verdana, Tahoma;
 	}
 	.button {
-		display: inline-block;
-		margin: 5px;
+		margin: .5rem;
 		color: white;
 		border: 1px solid white;
 		border-radius: 50%;
 		width: 24px;
 		height: 24px;
 		padding: 10px;
+		background-color: #1b1b1b;
 		// transition: all 300ms ease-out;
 		@each $class, $color in $brand-colors {
 			&.#{$class} {
@@ -37,5 +56,33 @@ $brand-colors: (
 				}
 			}
 		}
+	}
+}
+
+@media only screen and (max-width: 560px) and (orientation: portrait) {
+	.link-social {
+		right: .5rem;
+		top: .5rem;
+	}
+	.link-social, .post-social {
+		.button {
+			 width: 35px;
+			 height: 35px;
+			 margin: .25rem;
+		}
+	}
+
+}
+
+
+@media only screen and (max-width: 375px) {
+	.shareText {
+		font-size: 1em !important;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+	.shareText {
+		font-size: .75em !important;
 	}
 }
