--- a/src/components/video/thumb.module.scss
+++ b/src/components/video/thumb.module.scss
@@ -1,20 +1,34 @@
 .thumbContainer {
-    display: block;
-    float: right;
-    clear: both;
-    width: 30%;
-    padding-top: 30%;
+    flex: 1 1 auto;
+    width: 90%;
+    padding-top: 90%;
     height: auto;
-    margin: 2% 5% 2% 55%;
-    position: relative;
-    border: 1px solid #000000b8;;
+    margin: 5%;
+    border: 1px solid #000000b8;
     border-radius: 50%;
     -webkit-box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.45);
     box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.45);
     transform: scale(1);
+    cursor: pointer;
+    background-size: contain;
+     
   }
 
+.thumbContainer .backgroundHighlight {
+  border-radius: 50%;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  opacity: .2;
+
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+   -ms-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+       transition: all 0.2s ease-out;
+}
   .infoBlock {
     width: 50%;
     height: 50%;
@@ -69,14 +83,22 @@
       
       .triangle {
         -webkit-transition: all 0.7s ease-in-out;
-        stroke-dasharray: 240;
-        stroke-dashoffset: 480;
+        stroke-dasharray: 650;
+        stroke-dashoffset: 650;
         stroke: none;
-        fill: none;
+        fill: white;
+        fill-opacity: 0;
         transform: translateY(0) 
        }
   }
+.thumbContainer.preview:hover {
+}
 
+.thumbContainer.preview .playBut:hover {
+  .triangle{ 
+    fill-opacity: 1;
+  }
+}
   .thumbContainer.preview {
     -webkit-transition: all 0.2s ease-out;
        -moz-transition: all 0.2s ease-out;
@@ -86,6 +108,10 @@
     
             transform: scale(1.1);
   
+     .backgroundHighlight {
+        opacity: 0;
+      }
+
       .infoBlock .thumbTitle {
         opacity: 0;
         -webkit-transition: opacity 0.8s ease-out;
@@ -95,26 +121,33 @@
                 transition: opacity 0.8s ease-out;
       }
       .triangle {
+
         stroke-dashoffset: 0;
+        fill-opacity: 0;
         opacity: 1;
         stroke: white;
-        animation: nudge 0.7s ease-in-out;
+        animation: nudge 1s ease-in;
       
         @keyframes nudge{
           0% {
-            transform: translateX(0)  
+            stroke-dashoffset: 650;
+            transform: translateX(0);
+            fill-opacity:0;
           }
           30% {
             transform: translateX(-5px)
           }
           50% {
-            transform: translateX(5px)
+            transform: translateX(5px);
+            fill-opacity:0;
           }
-          70% {
-            transform: translateX(-2px)
+          80% {
+            transform: translateX(-2px);
           }
           100% {
-            transform: translateX(0)
+            transform: translateX(0);
+            stroke-dashoffset: 0;
+            fill-opacity:1;
           }
         }
       }
@@ -125,12 +158,69 @@
   }
     
   .thumbContainer.play {
-    -webkit-transition: all 1.4s ease-out;
+/*    -webkit-transition: all 1.4s ease-out;
        -moz-transition: all 1.4s ease-out;
         -ms-transition: all 1.4s ease-out;
          -o-transition: all 1.4s ease-out;
-            transition: all 1.4s ease-out;
+            transition: all 1.4s ease-out;*/
   }
+
+
+
+@media only screen and (max-width: 700px) {
+  .thumbContainer {
+    height: 25vw;
+    padding-right: 25vw;
+    padding-top: 0;
+    margin: 2vh 1vh;
+  }
+}
+
+@media only screen {
+  .thumbContainer.mobile {
+    height: 40vw;
+    padding-right: 40vw;
+    padding-top: 0;
+    margin: 2vh 1vh;
+  }
+  .thumbContainer .playBut {
+  .triangle {
+    stroke-dashoffset: 0;
+    fill-opacity: 0;
+    opacity: 1;
+    stroke: white;
+    animation: nudge 1s ease-in;
+  }
+}
+  .infoBlock .thumbTitle {
+    display: none;
+  }
+}
+
+
+@media only screen and (orientation: landscape) {
+  .thumbContainer.mobile {
+    width: 33vh !important;
+    padding-top: 33vh !important;
+    height: unset;
+    padding-right: 0;
+    margin: 1vh 2vh;
+  }
+}
+@media only screen and (max-height: 731px) and (orientation: portrait) {
+  .thumbContainer.mobile {
+    height: 35vw;
+    padding-right: 35vw;
+  }
+}
+
+@media only screen and (max-height: 640px) and (orientation: portrait) {
+  .thumbContainer.mobile {
+    height: 30vw;
+    padding-right: 30vw;
+  }
+}
+
 
   /* 
   ##Device = Tablets, Ipads (portrait)
@@ -138,9 +228,13 @@
 */
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  
-  //CSS
-  
+  .thumbContainer.mobile {
+    height: unset;
+    width: 30vw;
+    padding-top: 30vw;
+    padding-right: 0;
+  }
+
 }
 
 /* 
@@ -148,20 +242,22 @@
   ##Screen = B/w 768px to 1024px
 */
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+  .thumbContainer {
   
-  //CSS
-  
+  } 
 }
+@media only screen and (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+  .thumbContainer {
 
+  } 
+}
 /* 
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
   ##Screen = B/w 481px to 767px
 */
 
-@media (min-width: 481px) and (max-width: 767px) {
-  
-  //CSS
+@media only screen and (min-width: 481px) and (max-width: 767px) {
   
 }
 
@@ -169,19 +265,3 @@
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
 */
-
-@media (min-width: 320px) and (max-width: 700px) {
-  .thumbContainer {
-    clear: none;
-    display: inline-block;
-
-    width: 30vh;
-    height: 30vh;
-    padding: 0;
-    margin: 2vh 1vh;
-  }
-  .infoBlock .thumbTitle {
-    font-size: .8em;
-    line-height: 1em;
-  }
-}
