--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,3 +30,24 @@ h1 span, h2 span, h3 span {
   font-size: .95em;
   font-family: 'Open Sans', Verdana, Tahoma;
 }
+
+
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
