added in scrollbars

--- a/src/components/description/description.module.scss
+++ b/src/components/description/description.module.scss
@@ -6,6 +6,7 @@
 .descriptionText {
     flex: 0 1 15vh;
     font-size: .7em;
+    padding-right: 10px;
     letter-spacing: .18em;
     overflow-x: none;
     overflow-y: auto;
