--- a/src/components/video/videoGallery.module.scss
+++ b/src/components/video/videoGallery.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 1rem;
+  padding-right: 1rem;
 }
 .TVContainer {
   height: 100%;
