--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,13 +36,13 @@ h1 span, h2 span, h3 span {
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
-    background-color: #F5F5F5;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar
 {
-    width: 12px;
-    background-color: #F5F5F5;
+    width: 8px;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb
