--- a/src/components/social/share.scss
+++ b/src/components/social/share.scss
@@ -22,21 +22,13 @@ $brand-colors: (
 	top: 0;
 	right: 0;
 }
-.post-social {
-
-    -webkit-box-shadow: 0px -10px 10px -10px rgba(0,0,0,0.75);
-    -moz-box-shadow:  0px -10px 10px -10px rgba(0,0,0,0.75);
-    box-shadow:  0px -10px 10px -10px rgba(0,0,0,0.75);
-}
 .post-social, .link-social {
 	display: flex;
 	.shareText {
-		align-self: flex-end;
+		align-self: center;
 		color: white;
 		font-size: 1.2rem;
 		margin-right: auto;
-		margin-bottom: .5rem;
-		margin-left: .5rem;
 		font-family: "Above", Verdana, Tahoma;
 	}
 	.button {
