--- a/src/components/video/fullScreenVideo.module.css
+++ b/src/components/video/fullScreenVideo.module.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     background: rgba(0,0,0,1);
     -webkit-transition: background 1s ease-in;
        -moz-transition: background 1s ease-in;
@@ -16,13 +16,9 @@
   
     z-index: 100;
   }
-  .fullScreen {
-          position: absolute;
-          height: 94%;
-          width: 94%;
-          top: 0;
-          left: 0;
-          margin: 3%;
+  .fullScreenPlayer {
+    height: 56.25vw;
+    width: 100vw;
   }
   .hidden {
     display:none;
