share links close btn

--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    overflow: scroll;
 }
 .textContainer {
     flex: 1 1 200px;
