--- a/src/components/social/share.scss
+++ b/src/components/social/share.scss
@@ -25,10 +25,11 @@ $brand-colors: (
 .post-social, .link-social {
 	display: flex;
 	.shareText {
-		align-self: center;
+		align-self: flex-end;
 		color: white;
 		font-size: 1.2rem;
 		margin-right: auto;
+		margin-bottom: 10px;
 		font-family: "Above", Verdana, Tahoma;
 	}
 	.button {
