--- a/src/components/contact/contactForm.module.css
+++ b/src/components/contact/contactForm.module.css
@@ -70,3 +70,10 @@ button:active, button:focus {
        padding: 2rem 10px;
     }
 }
+
+
+@media only screen and (max-width: 375px) {
+    .contactContainer {
+        align-content: flex-end;
+    }
+}
