--- a/src/components/video/videoGallery.module.scss
+++ b/src/components/video/videoGallery.module.scss
@@ -6,6 +6,10 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
+  background-color: #111111;
+  -webkit-box-shadow: inset 0px 0px 18px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 0px 0px 18px -2px rgba(0,0,0,0.75);
+  box-shadow: inset 0px 0px 18px -2px rgba(0,0,0,0.75);
 }
 .galleryContainer {
   height: 100%;
