--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,3 +51,10 @@ h1 span, h2 span, h3 span {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+
+  
+@media only screen and (max-width: 500px) {
+  body {
+    overflow-y: scroll !important;
+  }
+}
