--- a/src/components/social/share.scss
+++ b/src/components/social/share.scss
@@ -16,6 +16,7 @@ $brand-colors: (
 	position: absolute;
 	right: 4.5rem;
 	top: 3.5rem;
+	z-index: 800;
 }
 .link-social.bottom {
 	position: relative;
