--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,13 +3,6 @@
   /* NAV STYLES
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-  .navHover {
-    position:fixed;
-    width: 100%;
-    height: 50px;
-    z-index: 1000;
-  }
-
   nav {
       box-sizing: border-box;
       position: fixed;
@@ -27,8 +20,8 @@
       -webkit-transition: all .9s ease-out;
       transition: all .9s ease-out;
 
-      /*
-      opacity: 1;
+      
+     /* opacity: 0;
       transform: translateY(-50px);*/
   }
 
@@ -37,7 +30,6 @@
     transition: all .5s ease-out;
 
     opacity: 1;
-    transform: translateY(0px);
   }
 
   nav ul {
